# plcify

./: CMakeLists.txt  README.md
code/PLCer/: main.c
code/PLCer.xcodeproj/: project.pbxproj
code/PLCer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
code/plcify/: main.c
code/plcify.xcodeproj/: project.pbxproj
code/plcify.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
